--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <img class="img-responsive imageCenter" src="images/arrow_keys.png" alt="Keys to play">
                         <br>
                         <h3>Path to Success </h3>
-                        <ul>
+                        <ul id="textAlign">
                             <li>Don't enter the water </li>
                             <li>Grab the gems as quickly as possible before they disappear</li>
                             <li>Collect the key to reach the castle</li>
